add linter to android projects and check for android api version